--- a/Projeto - Sexta/styles/intranet.css
+++ b/Projeto - Sexta/styles/intranet.css
@@ -14,7 +14,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(57, 105, 163);
+    background-color: #68916a;
     color: white;
     padding: 15px;
     
@@ -81,7 +81,7 @@ input {
 button {
     width: auto;
     padding: 8px 20px;
-    background: linear-gradient(90deg, rgba(57, 105, 163, 1) 0%, rgba(28, 78, 128, 1) 100%);
+    background: linear-gradient(90deg,#68916a 0%, rgb(30, 100, 170) 100%);
     color: white;
     font-size: 14px;
     font-weight: bold;
@@ -101,7 +101,7 @@ button:hover {
 button:active {
     transform: scale(0.98);
     box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-    background: linear-gradient(90deg, rgba(28, 78, 128, 1) 0%, rgba(57, 105, 163, 1) 100%);
+    background: linear-gradient(90deg, #68916a 0%, rgba(57, 105, 163, 1) 100%);
 }
 
 
