--- a/Projeto - Sexta/styles/intranet.css
+++ b/Projeto - Sexta/styles/intranet.css
@@ -75,10 +75,10 @@ main {
 
 form {
     background-color: white;
-    padding: 15px; /* Reduzido para um espaço menor */
+    padding: 15px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 350px; /* Reduzido de 400px para 350px */
+    max-width: 350px;
     margin: 0 auto;
 }
 
@@ -133,14 +133,14 @@ ul {
 }
 
 li {
-    background: #f9f9f9; /* Fundo mais suave */
+    background: #f9f9f9;
     padding: 15px;
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
-    justify-content: space-between; /* Alinha texto e botão em lados opostos */
-    align-items: center; /* Centraliza o botão verticalmente */
+    justify-content: space-between;
+    align-items: center;
 }
 
 li .reserva-info {
